# gcc

./: .gitignore
CS/: .gitignore
CS/ColorPick/: ColorPick.sln  UpgradeLog.htm
CS/DevTool_ACPowerMetter/: ACPowerMetter.sln  readme.md
CS/DevTool_LoggingCharger/: EtaLoggingCharger.sln  readme.md
CS/EscPosEmulator/: EscPosEmulator.sln
CS/EtaDebugConsole/: EtaDebugConsole.sln  build.cmd
CS/EtaElectroBike/: EtaElectroBike.sln
CS/EtaElementsDatabase/: EtaElementsDatabase.sln
CS/EtaSecurityGovernorManager/: EtaSecurityGovernorManager.sln  readme.md
CS/Injector/: Injector.sln
CS/WGFlash/: WGFlash.sln
CS/WindGenCalc/: WindGenCalc.sln
CS/colors_to_h/: colors_to_h.sln
CS/etaoscil_font_to_h/: etaoscil_font_to_h.sln
CS/etaoscil_image_to_h/: etaoscil_image_to_h.sln
CS/font_to_bmp/: font_to_bmp.sln
CS/font_to_h/: font_to_h.sln
CS/image_to_h/: image_to_h.sln
Embedded GCC/: .gitignore
Embedded GCC/DevTool_ACPowerMetter/: .cproject  .project  ACPowerMetter.pdsprj  Makefile.mk  readme.md  upload.cmd  upload2.cmd
Embedded GCC/DevTool_LifepoCharger/: .cproject  DevTool_LifepoCharger.pdsprj  Makefile.mk  Makefile_common.mkinc  upload.cmd  upload2.cmd
Embedded GCC/DevTool_RdsMetter/: .cproject  .project  Makefile.mk  RdsMetter.pdsprj  build.sh  readme.md  upload.cmd  upload2.cmd
Embedded GCC/DevTool_SmartCharger/: .project  Makefile.mk  build.cmd  readme.md
Embedded GCC/DevTool_UartLogger/: .cproject  .project  DevTool_UartLogger.pdsprj  Makefile.mk  Makefile_common.mkinc  upload.cmd  upload2.cmd
Embedded GCC/EtaElectroBike/: .cproject  .project  EtaElectroBike.pdsprj  Makefile_0xx.mk  Makefile_10x.mk  Program.cs  build_0xx.cmd  build_0xx.sh  build_10x.cmd  build_10x.sh  ld_030c8.lds  ld_103re.lds
Embedded GCC/EtaElectroBikeCustom/: CMakeLists.txt  Makefile_KTLCD3.mk  Makefile_S12S.mk  Makefile_common.mkinc  Makefile_project.mkinc  build_KTLCD3.cmd  build_KTLCD3.sh  build_S12S.cmd  build_S12S.sh  upload_S12S.cmd
Embedded GCC/EtaElectroBikeCustom/KTLCD3/: Makefile_common.mkinc  build.sh  build1.cmd
Embedded GCC/EtaElectroBikeCustom/KTLCD3/Application/: Makefile_application.mkinc  buttons.c  ht1622.c  main.c  sensors.c  utils.c
Embedded GCC/EtaElectroBikeCustom/KTLCD3/Application/inc/: display.h  ht1622.h  interrupts.h  periph.h  sensors.h  utils.h
Embedded GCC/EtaElectroBikeCustom/S12S/: readme.md  upload.cmd
Embedded GCC/EtaElectroBikeCustom/S12S/Application/: controls.c  drive.c  hud.c  main.c  network.c  periph.c  settings.c
Embedded GCC/EtaElectroBikeCustom/S12S/Application/inc/: bldc.h  controls.h  drive.h  interrupts.h  ktlcd3.h  settings.h
Embedded GCC/EtaElectroBikeCustom/S12S/Config/: Makefile_config.mkinc  config.h
Embedded GCC/EtaElectroBikeKTLCD3Custom/: CMakeLists.txt  upload.cmd
Embedded GCC/EtaElectroBikeKTLCD3Custom/Application/: buttons.c  display.c  ht1622.c  lcd.c  logic.c  main.c  network.c  periph.c  sensors.c  settings.c  utils.c
Embedded GCC/EtaElectroBikeKTLCD3Custom/Application/inc/: buttons.h  display.h  ht1622.h  interrupts.h  lcd.h  logic.h  network.h  periph.h  sensors.h  settings.h  utils.h
Embedded GCC/EtaElectroBikeKTLCD3Custom/Config/: config.h
Embedded GCC/EtaElectroBikeS12SCustom/: CMakeLists.txt  Makefile.mk  build.cmd  readme.md  sp.ini
Embedded GCC/EtaElectroBikeS12SCustom/Application/: Makefile_application.mkinc  bldc.c  controls.c  drive.c  hud.c  ktlcd3.c  main.c  periph.c  sensors.c  settings.c  utils.c
Embedded GCC/EtaElectroBikeS12SCustom/Application/inc/: bldc.h  drive.h  hud.h  ktlcd3.h  main.h  network.h  periph.h  sensors.h  settings.h  utils.h
Embedded GCC/EtaElectroBikeS12SCustom/Config/: config.h
Embedded GCC/EtaElectroBike_BatteryCellController/: .project  EtaElectroBike_BatteryCellController.pdsprj  EtaElectroBike_BatteryManagementSystem.pdsprj  Makefile.mk  upload.cmd  upload2.cmd
Embedded GCC/EtaOscilloscope/: .cproject  .project  Makefile_common.mkinc  Makefile_native.mk  Makefile_windows_emulator.mkinc  Makefile_windows_emulator_x64.mk  Makefile_windows_emulator_x86.mk  build_native.cmd  build_native.sh  build_windows_emulator_x64.cmd  build_windows_emulator_x86.cmd  download_full.cmd  ld_main.lds  ld_slot1.lds  ld_slot2.lds  ld_slot3.lds  ld_slot4.lds  readme.md  upload.cmd  upload_full.cmd  upload_full2.cmd
Embedded GCC/EtaReverseOsmosis/: .cproject  .project  EtaReverseOsmosis.pdsprj  Makefile_0xx.mk  Makefile_common.mkinc  build_0xx.sh  ld_030k6.lds  readme.md  upload.cmd
Embedded GCC/EtaReverseOsmosis2/: CMakeLists.txt  EtaReverseOsmosis2.pdsprj  Makefile_common.mkinc  board.cfg  build_0xx.cmd  ld_030k6.lds  upload.cmd
Embedded GCC/EtaReverseOsmosis2/Application/: Makefile_application.mkinc  dialogs.c  dialogs.h  entry.c  melody.c  menus.c
Embedded GCC/EtaReverseOsmosis2/Application/inc/: entry.h  melody.h  menus.h
Embedded GCC/EtaReverseOsmosis2/Application/menus/: main.stgui
Embedded GCC/EtaReverseOsmosis2/Config/: config.h
Embedded GCC/EtaReverseOsmosis2/Platform/0xx/: interrupt.c  periphs.c  startup.c
Embedded GCC/EtaReverseOsmosis2/Platform/0xx/inc/: config_periph.h
Embedded GCC/EtaReverseOsmosis2/Platform/Common/inc/: periphs.h
Embedded GCC/EtaWirelessSecurity/: .cproject  .project  EtaWirelessSecurity Accessor RFM.pdsprj  EtaWirelessSecurity Accessor nRF.pdsprj  EtaWirelessSecurity SmartHome Governor.pdsprj  Makefile_0xx_accessor.mk  build_all.cmd  (+12 more)
Embedded GCC/_EtaSt7565/: CMakeLists.txt  Makefile_eta_st7565.mkinc  eta_st7565.c  eta_stgui_bitmaps.c  eta_stgui_clip_draw.c  eta_stgui_common.c  eta_stgui_dialogs.c  eta_stgui_fonts.c  eta_stgui_menus.c  eta_stgui_primitives.c
Embedded GCC/_EtaSt7565/inc/: eta_st7565.h  eta_stgui_bitmaps.h  eta_stgui_clip_draw.h  eta_stgui_common.h  eta_stgui_dialogs.h  eta_stgui_fonts.h  eta_stgui_menus.h  eta_stgui_primitives.h
Embedded GCC/_EtaSt7565/tools/: stgui_img2hbmp.py  stgui_img2hfont.py  stgui_stgui2hstgui.py
Embedded GCC/_STM32F0xx_StdPeriph/: CMakeLists.txt  Makefile_stdperiph.mkinc  stm32f0xx_dma.c
Embedded GCC/_STM32F0xx_StdPeriph/inc/: stdperiph.h  stm32f0xx.h  stm32f0xx_dma.h
(+392 files in other folders)
